...
<!--            android:textStyle="bold"-->
<!--            ></com.google.android.material.textview.MaterialTextView>-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/pnumtext"
            android:hint="Phone Number"
            android:layout_marginTop="5dp"
            android:transitionName="edit_trans"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phonenumber"
                android:inputType="number"

                />
        </com.google.android.material.textfield.TextInputLayout>


...
<!--            android:textStyle="bold"-->
<!--            ></com.google.android.material.textview.MaterialTextView>-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/fnametext"
            android:hint="Full Name"
            android:transitionName="edit_trans"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fullname"

                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>
<!--        <com.google.android.material.textview.MaterialTextView-->
<!--            android:layout_width="match_parent"-->
...
<!--            android:text="Address"-->
<!--            ></com.google.android.material.textview.MaterialTextView>-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/addtext"
            android:hint="Address"
            android:transitionName="edit_trans"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/address"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

<!--        <com.google.android.material.textview.MaterialTextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
...
<!--            ></com.google.android.material.textview.MaterialTextView>-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="1dp"
            android:id="@+id/pwd"
            android:hint="Password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:transitionName="edit_trans"
            app:passwordToggleEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
<!--        <com.google.android.material.textview.MaterialTextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->

...
<!--            android:text="Confirm Password"-->
<!--            ></com.google.android.material.textview.MaterialTextView>-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/passcon"
            android:hint="Confirm Password"
            android:transitionName="edit_trans"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:passwordToggleEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/confirmpassword"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
...

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/arrow"
        android:clickable="true"
        android:id="@+id/register"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="140dp"
        android:transitionName="btn_trans"
        />


...
