...
                        android:textAlignment="center"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mediumButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:orientation="vertical">

                    <RelativeLayout
...
                    android:textSize="18sp" />

                <Button
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"

                    android:text="Vehicle"
                    android:textStyle="bold"
                    app:backgroundTint="#FF0303" />

                <com.synnapps.carouselview.CarouselView
                    android:id="@+id/carouselviews"
                    android:layout_width="match_parent"
...
