<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/ic_dashboard"
        android:icon="@drawable/ic_baseline_dashboard_24"
        android:title="Dashboard"
        />
    <item
        android:id="@+id/ic_history"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="History"
        />
    <item
        android:id="@+id/ic_notification"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="Notification"
        />
    <item
        android:id="@+id/ic_setting"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="Setting"
        />
</menu>
