...
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <include layout="@layout/toolbar"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:id="@+id/botton_nav"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/menu"
        android:background="#00B0FF"
...
